[project]
name = "bertopic-sample"
version = "0.1.0"
description = "Japanese document topic modeling and 2D visualization with BERTopic"
readme = "README.md"
requires-python = ">=3.12
license = { text = "MIT" }
dependencies = [
    "bertopic>=0.17.4",
    "matplotlib>=3.10.8",
    "sudachidict-core>=20260116",
    "sudachipy>=0.6.11",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
